<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSCR 10</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registro">Registro</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_entrar">Entrar</string>
    <string name="entrar">Login</string>
    <string name="nombre">Nombre</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_registro">registro</string>
    <string name="hello_world">Hello world!</string>
    <string name="continuar">Continuar</string>
    <string name="salir">Salir</string>
    <string name="logs">Logs</string>
    <string name="title_activity_log">Log</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="title_activity_lista_partidas">ListaPartidas</string>
    <string name="title_section_1">Disponibles</string>
    <string name="title_section_2">Jugando</string>
    <string name="title_section_3">Creadas</string>
    <string name="title_activity_jugar">Juego</string>
    <string name="dados">Tirar dado</string>
    <string name="derecha">derecha</string>
    <string name="izquierda">izquierda</string>
    <string name="action_create_game">Crear Juego</string>
</resources>
