<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondotrivia">

    <TextView
        android:text="@string/bienvenido"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="60dp"
        android:layout_marginTop="110dp"/>
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <info.hoang8f.widget.FButton
            android:id="@+id/entrar"
            android:text="@string/entrar"
            android:layout_width="80dp"
            android:layout_height="60dp"
            fbutton:buttonColor="@color/fbutton_color_silver"
            fbutton:shadowColor="@color/fbutton_color_midnight_blue"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="10dp"
            fbutton:cornerRadius="7dp"
            android:gravity="center"

            android:layout_marginBottom="2dp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/registro"
            android:layout_width="80dp"
            android:gravity="center"
            android:text="@string/registro"

            android:layout_height="60dp"
            fbutton:buttonColor="@color/fbutton_color_silver"
            fbutton:shadowColor="@color/fbutton_color_midnight_blue"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="10dp"
            fbutton:cornerRadius="7dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"/>


    </LinearLayout>

</RelativeLayout>
